--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "redux-logger": "^3.0.6",
     "vis-network": "^6.4.4"
   },
-  "proxy": "http://0.0.0.0:3001",
   "scripts": {
-    "client": "HOST=0.0.0.0 react-scripts start",
+    "client": "react-scripts start",
     "server": "node proxy-server.js",
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "build": "react-scripts build",
